@@ -33,7 +33,9 @@ public abstract class Partitioner {
         "Partition keys must be given");
     Preconditions.checkArgument(keyList.length >= 0,
         "At least one partition key must be specified.");
-    Preconditions.checkArgument(numPartitions > 0, 
+    // In outer join, zero can be passed into this value because of empty tables.
+    // So, we should allow zero.
+    Preconditions.checkArgument(numPartitions >= 0,
         "The number of partitions must be positive: %s", numPartitions);
     this.partitionKeyIds = keyList;
     this.numPartitions = numPartitions;    
