@@ -1,0 +1,2 @@
+c_custkey,o_orderkey
+-------------------------------
