@@ -1,0 +1,7 @@
+c_custkey,o_orderkey
+-------------------------------
+1,0
+2,0
+3,0
+4,0
+5,0
