@@ -1,7 +1,7 @@
 c_custkey,o_orderkey,o_orderstatus,o_orderdate
 -------------------------------
-1,1,O,1996-01-02
-2,2,O,1996-12-01
-3,3,F,1993-10-14
+1,0,,
+2,0,,
+3,0,,
 4,0,,
 5,0,,
